# scripts

./: .clang-format  .envrc  .gitignore  .nixd.nix  CMakeLists.txt  Makefile  README.adoc  flake.nix  pkg.nix  run_tests
.github/workflows/: build-and-test.yml
src/: archive_yt_playlist.cc  fixname.cc  mirror-git-repos.cc  rename2uniq.cc  utils.hh
tests/: fixname  mirror-git-repos
